<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@drawable/space">

    <TextView
            android:text="@string/random_levels"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"

            android:elevation="4dp"
            android:id="@+id/btRandoml2"
            app:layout_constraintStart_toStartOf="@+id/btNormal"
            android:gravity="center" android:textSize="24sp"
            android:textColor="@android:color/white" android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/btNormal"
            android:padding="8dp" android:textColorLink="@color/colorPrimaryDark"
            android:background="@color/blue2"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/btRandom"/>
    <TextView
            android:text="@string/normal_by_times"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"

            android:elevation="4dp"
            android:id="@+id/bt_normal_by_times"
            app:layout_constraintStart_toStartOf="@+id/btNormal"
            android:gravity="center" android:textSize="24sp"
            android:textColor="@android:color/white" android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/btNormal"
            android:padding="8dp" android:textColorLink="@color/colorPrimaryDark"
            android:background="@color/blue2"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/btRandoml2"/>
    <TextView
            android:text="@string/hello"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:id="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp" android:textSize="24sp"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:gravity="center" android:textStyle="bold|italic"
            app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="96dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView" android:text="@string/test_choose"
            android:textSize="20sp" android:textColor="@android:color/holo_blue_light"
            app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toTopOf="@+id/btNormal"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="1.0"/>
    <TextView
            android:text="@string/bt_normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:clickable="true"

            android:elevation="4dp"
            android:id="@+id/btNormal"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
            android:gravity="center" android:textSize="24sp"
            android:textColor="@android:color/white" android:textStyle="bold"
            android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="32dp"
            android:padding="8dp" android:textColorLink="@color/colorPrimaryDark"
            android:background="@color/blue2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toTopOf="@+id/bt_normal_by_times" android:layout_marginBottom="16dp"/>
    <TextView
            android:elevation="4dp"

            android:clickable="true"
            android:text="@string/bt_random"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/blue2"
            android:id="@+id/btRandom"
            app:layout_constraintEnd_toEndOf="@+id/btNormal"
            android:textStyle="bold" android:textColor="@android:color/white"
            android:textSize="24sp" android:gravity="center"
            app:layout_constraintStart_toStartOf="@+id/btNormal"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp" android:padding="8dp"/>
</android.support.constraint.ConstraintLayout>